--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Mar 14 13:53:51 EDT 2017
+#Tue Mar 06 23:46:23 EST 2018
+ndk.dir=/home/keith/Android/Sdk/ndk-bundle
 sdk.dir=/home/keith/Android/Sdk
